--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -1,56 +1,34 @@
 <html>
 	<head>
-		<title>My first Three.js app</title>
-		<script src="js/three.min.js"></script>
-		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
-		</style>
-	</head>
-	<body>
+		<title>Cannon simulator</title>
+		<!-- <script src="js/three.min.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
+		<script language="javascript" type="text/javascript" src="main.js"></script>
+		<link rel="stylesheet" href="style.css">
 		
-		<script>
-			var scene = new THREE.Scene();
-			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
+		<!-- <style> body {padding: 0; margin: 0;} </style> -->
+	</head>
+	
+	<body onload="onLoad();">
 
-			var renderer = new THREE.WebGLRenderer();
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
+		<div id="wrapper" >
 
-			var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-			var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
-			var cube = new THREE.Mesh( geometry, material );
-			//scene.add( cube );
+			<div id="container" >
+				<!-- <canvas id="a" width="300" height="225"></canvas> -->
+				<!-- <script language="javascript" type="text/javascript" src="main.js"></script> -->
+			</div>
+
 			
-			//sphere
-			var material = new THREE.MeshBasicMaterial({
-				color: 0x0000ff
-			});
+			<div id="settings">
+			 <h5>Section 2</h5>
+    			<p>This paragraph would be your content paragraph...</p>
+    			<p>Here's another content article right here.</p>
+			</div>
 
-			var radius = 5;
-			var segments = 32;
+		</div>
 
-			var circleGeometry = new THREE.CircleGeometry( radius, segments );				
-			var circle = new THREE.Mesh( circleGeometry, material );
-			scene.add( circle );
-			//-----------
 
-			camera.position.z = 5;
 
-			var render = function () {
-				requestAnimationFrame( render );
-
-				//cube.rotation.x += 0.1;
-				//cube.rotation.y += 0.1;
-
-				//cube.position.x += 0.1;
-				
-				//sphere.position.x += 0.01;
-
-				renderer.render(scene, camera);
-			};
-
-			render();
-		</script>
+	
 	</body>
 </html>
