--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -22,16 +22,14 @@
 			<div id="settings">
 			 <h2>Settings</h2>
 			 <p>
-    			Initial Velocity: <input type="number" id="initialVelocity" name="initialVelocity" value="20"><br>
-				Angle: <input type="number" id="angle" name="angle" value="70"><br>
-				Size of ball: <input type="number" id="size" name="size" value="1"><br>
+    			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" value="20"><br><br>
+				Angle <br> <input type="number" id="angle" name="angle" value="70"><br><br>
+				Size of ball<br> <input type="number" id="size" name="size" value="1"><br><br>
 			 </p>
 
-				<button onclick="update()">Update</button>
-				<button onclick="clearish()">Clear</button>
-				<button onclick="launch()">Launch</button>
-
-
+				<button onclick="update()" id="button">Update</button>
+				<button onclick="clearish()" id="button">Clear</button>
+				<button onclick="launch()" id="button">Launch</button>
 				
 			</div>
 
