added fps function and refactored the init function

--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -3,9 +3,13 @@
 		<title>Cannon simulator</title>
 		<!-- <script src="js/three.min.js"></script> -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
-		<script language="javascript" type="text/javascript" src="main.js"></script>
 		<link rel="stylesheet" href="style.css">
-		  <script src="lib.js"></script>
+		
+		<!-- javascript files -->
+		<script src="js/Stats.js"></script>
+		<script src="main.js"></script>
+		<script src="lib.js"></script>
+
 		
 		<!-- <style> body {padding: 0; margin: 0;} </style> -->
 	</head>
