fungerande hastighet, vinkel och size från settings

--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -27,7 +27,7 @@
 			 <p>
     			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" value="50"><br><br>
 				Angle <br> <input type="number" id="angle" name="angle" value="70"><br><br>
-				Size of ball<br> <input type="number" id="size" name="size" value="1"><br><br>
+				Size of ball<br> <input type="number" id="ballSize" name="ballSize" value="16"><br><br>
 			 </p>
 				<button onclick="clearish()" id="button">Clear</button>
 				<button onclick="launch()" id="button">Launch</button>
