expended menu and fixed so yuo cant run sim if its already running

--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -22,12 +22,21 @@
 			</div>
 
 			<div id="settings">
-			 <h2>Settings</h2>
+			 <h2>Boll Properties</h2>
 			 <p>
     			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" value="50"><br><br>
 				Angle <br> <input type="number" id="angle" name="angle" value="70"><br><br>
 				Size of ball<br> <input type="number" id="ballSize" name="ballSize" value="8"><br><br>
 			 </p>
+			 <h2>Wind Properties</h2>
+			 <p>
+    			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" value="50"><br><br>
+				Angle <br> <input type="number" id="angle" name="angle" value="70"><br><br>
+			 </p>
+			 <h2>Ground Properties</h2>
+			 <p>
+    			Ground coefficients <br> <input type="number" id="initialVelocity" name="initialVelocity" value="50"><br><br>
+			 </p>			 			 
 				<button onclick="clearish()" id="button">Clear</button>
 				<button onclick="launch()" id="button">Launch</button>
 				
