Connected wind settings to variables

--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -30,8 +30,8 @@
 			 </p>
 			 <h2>Wind Properties</h2>
 			 <p>
-    			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" value="50"><br><br>
-				Angle <br> <input type="number" id="angle" name="angle" value="70"><br><br>
+    			Initial Velocity <br> <input type="number" id="initialVelocity_wind" name="initialVelocity_wind" value="10"><br><br>
+				Angle <br> <input type="number" id="angle_wind" name="angle_wind" value="70"><br><br>
 			 </p>
 			 <h2>Ground Properties</h2>
 			 <p>
