--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -16,13 +16,15 @@
 
 		<div id="wrapper" >
 
+		<div id ="settings">
+
 			<div id="container" >
 				<!-- <canvas id="a" width="300" height="225"></canvas> -->
 				<!-- <script language="javascript" type="text/javascript" src="main.js"></script> -->
 			</div>
 
 			<div id="ballsettings">
-			 <h2>Boll Properties</h2>
+			 <h3>Boll Properties</h3>
 			 <p>
     			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" min="0" max="500" value="50"><br><br>
 				Angle <br> <input type="number" id="angle" name="angle" min="0" max="359" value="45"><br><br>
@@ -34,7 +36,7 @@
 				 <input type="checkbox" id="windCheck" onClick="showWind();">
 				 </p>
 			<div id="windsettings" style="display:none;">
-				 <h2>Wind Properties</h2>
+				 <h3>Wind Properties</h3>
 				 <p>
 	    			Initial Velocity <br> <input type="number" id="initialVelocity_wind" name="initialVelocity_wind"value="0"><br><br>
 					Angle <br> <input type="number" id="angle_wind" name="angle_wind" value="180"><br><br>
@@ -42,7 +44,7 @@
 			 </div>
 
 			 <div id="groundsettings">
-			 <h2>Ground Properties</h2>
+			 <h3>Ground Properties</h3>
 			 <p>
     			Ground coefficients <br> <input type="number" id="ground" name="ground" min="0" max="1" step="0.01" value="1"><br><br>
 			 </p>			 			 
@@ -51,6 +53,7 @@
 			</div>
 			<button onclick="clearish()" id="button">Clear</button>
 			<button onclick="launch()" id="button">Launch</button>
+			</div>
 		</div>
 
 
