--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -16,15 +16,15 @@
 
 		<div id="wrapper" >
 
-		<div id ="settings">
+
 
 			<div id="container" >
 				<!-- <canvas id="a" width="300" height="225"></canvas> -->
 				<!-- <script language="javascript" type="text/javascript" src="main.js"></script> -->
 			</div>
-
+		<div id ="settings">
 			<div id="ballsettings">
-			 <h3>Boll Properties</h3>
+			 <h3>Ball Properties</h3>
 			 <p>
     			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" min="0" max="500" value="50"><br><br>
 				Angle <br> <input type="number" id="angle" name="angle" min="0" max="359" value="45"><br><br>
