--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<title>Cannon simulator</title>
+	<meta charset="UTF-8">
+		<title>Canon simulator</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
 		<link rel="stylesheet" href="style.css">
 		
