--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -50,7 +50,7 @@
 								<option value="0.9">Glas</option>
 								<option value="0.8">Steel</option>
 								<option value="0.4">Bras</option>
-								<option value="0.2">Led</option>
+								<option value="0.2">Lead</option>
 								<option value="0.6">Wood</option>
 					 </select><br>
 			 </p>			 			 
