--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -47,11 +47,11 @@
 			 <h3>Ground Properties</h3>
 			 <p>
 				Material <br> <select name="material" id="material"> 
-								<option value="0.9">Glas</option>
-								<option value="0.8">Steel</option>
-								<option value="0.4">Bras</option>
-								<option value="0.2">Lead</option>
-								<option value="0.6">Wood</option>
+								<option value="0">Glas</option>
+								<option value="1">Steel</option>
+								<option value="2">Brass</option>
+								<option value="3">Lead</option>
+								<option value="4">Wood</option>
 					 </select><br>
 			 </p>			 			 
 				
