--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -47,11 +47,12 @@
 			 <h3>Ground Properties</h3>
 			 <p>
 				Material <br> <select name="material" id="material"> 
-								<option value="Glas">Glas</option>
-								<option value="Steel">Steel</option>
-								<option value="Brass">Brass</option>
-								<option value="Lead">Lead</option>
-								<option value="Wood">Wood</option>
+								<option value="Golf">Golf ball</option>
+								<option value="Tennis">Tennis ball</option>
+								<option value="Billiard">Billiard ball</option>
+								<option value="Wooden">Wooden ball</option>
+								<option value="Steel">Steel ball</option>
+								<option value="Glas">Glas Marble</option>
 					 </select><br>
 			 </p>			 			 
 				
