started to refator no ball is loaded initial

--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -5,6 +5,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
 		<link rel="stylesheet" href="style.css">
 		
+		<!-- jQuery -->
+		<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+		
 		<!-- javascript files -->
 		<script src="js/Stats.js"></script>
 		<script src="main.js"></script>
@@ -16,8 +19,6 @@
 	<body onload="init();">
 
 		<div id="wrapper" >
-
-
 
 			<div id="container" >
 				<!-- <canvas id="a" width="300" height="225"></canvas> -->
@@ -46,7 +47,7 @@
 			 <div id="groundsettings">
 			 <h3>Ground Properties</h3>
 			 <p>
-				Material <br> <select name="material" id="material"> 
+				Material <br> <select name="material" id="material" onchange="updateBall(this);"> 
 								<option value="Glas">Glas</option>
 								<option value="Steel">Steel</option>
 								<option value="Brass">Brass</option>
@@ -62,6 +63,16 @@
 			</div>
 		</div>
 
+
+	
+	<script type="text/javascript">
+        $(document).ready(function() {
+		   	$('select').on('change', function() {
+	  			
+	  			//alert( this.value );
+			});
+		});
+	</script>
 
 	<script type="x-shader/x-vertex" id="vertexShader">
     varying vec2 vUv;
