--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -52,7 +52,7 @@
 								<option value="Billiard">Billiard ball</option>
 								<option value="Wooden">Wooden ball</option>
 								<option value="Steel">Steel ball</option>
-								<option value="Glas">Glas Marble</option>
+								<option value="Glass">Glass Marble</option>
 					 </select><br>
 			 </p>			 			 
 				
