--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -19,42 +19,36 @@
 	<body onload="init();">
 
 		<div id="wrapper" >
-
-			<div id="container" >
-				<!-- <canvas id="a" width="300" height="225"></canvas> -->
-				<!-- <script language="javascript" type="text/javascript" src="main.js"></script> -->
-			</div>
+			<div id="container" ></div>
 		<div id ="settings">
 			<div id="ballsettings">
-			 <h3>Ball Properties</h3>
-			 <p>
-    			Initial Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" min="0" max="500" value="50"><br><br>
-				Angle <br> <input type="number" id="angle" name="angle" min="0" max="359" value="45"><br><br>
-				Radie <br> <input type="number" id="ballSize" name="ballSize" min="0" max="0.25" step="0.01" value="0.05"><br><br>
+				<h3>Ball Properties</h3>
+					 <p>
+	    		Ball Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" min="0" max="500" value="50"><br><br>
+						Angle <br> <input type="number" id="angle" name="angle" min="0" max="359" value="45"><br><br>
+						Radie <br> <input type="number" id="ballSize" name="ballSize" min="0" max="0.25" step="0.01" value="0.05"><br><br>
 
-				Material <br> <select name="material" id="material" onchange="updateBall(this);"> 
-								<option value="Golf">Golf ball</option>
-								<option value="Tennis">Tennis ball</option>
-								<option value="Billiard">Billiard ball</option>
-								<option value="Wooden">Wooden ball</option>
-								<option value="Steel">Steel ball</option>
-								<option value="Glass">Glas Marble</option>
-					 </select><br>
-			 </p>
+						Material <br><select name="material" id="material" onchange="updateBall(this);"> 
+										<option value="Golf">Golf ball</option>
+										<option value="Tennis">Tennis ball</option>
+										<option value="Billiard">Billiard ball</option>
+										<option value="Wooden">Wooden ball</option>
+										<option value="Steel">Steel ball</option>
+										<option value="Glas">Glas Marble</option>
+							 		 </select>
+							 	 <br>
+					 </p>
 
 			</div>
-				 <p>
-				 wind
-				 <input type="checkbox" id="windCheck" onClick="showWind();">
-				 </p>
-			<div id="windsettings" style="display:none;">
-				 <h3>Wind Properties</h3>
-				 <p>
-	    			Initial Velocity <br> <input type="number" id="initialVelocity_wind" name="initialVelocity_wind"value="0"><br><br>
-					Angle <br> <input type="number" id="angle_wind" name="angle_wind" value="180"><br><br>
-				 </p>
+				<p>wind<input type="checkbox" id="windCheck" onClick="showWind();">
+				</p>
+			<div id="windsettings" > <!--style="display:none;"-->
+				<h3>Wind Properties</h3>
+					<p>
+						Wind Velocity <br><input type="number" id="initialVelocity_wind" name="initialVelocity_wind"value="0"><br><br>
+						Angle<br><input type="number" id="angle_wind" name="angle_wind" value="180"><br><br>
+					</p>
 			 </div>
-
 
 			<button onclick="clearish()" id="button">Clear</button>
 			<button onclick="launch()" id="button">Launch</button>
@@ -65,8 +59,7 @@
 	
 	<script type="text/javascript">
         $(document).ready(function() {
-		   	$('select').on('change', function() {
-	  			
+		   	$('select').on('change', function() {	
 	  			//alert( this.value );
 			});
 		});
