fixade errors i html och css

--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8"/>
 		<title>Canon simulator</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
 		<link rel="stylesheet" href="style.css">
@@ -45,13 +45,13 @@
 			<div id="windsettings" style="display:none" > <!-- style="display:none; -->
 				<h3>Wind Properties</h3>
 					<p>
-						Wind Velocity <br><input type="number" id="initialVelocity_wind" name="initialVelocity_wind"value="0"><br><br>
+						Wind Velocity <br><input type="number" id="initialVelocity_wind" name="initialVelocity_wind" value="0"><br><br>
 						Angle<br><input type="number" id="angle_wind" name="angle_wind" value="180"><br><br>
 					</p>
 			 </div>
 
 			<button onclick="clearish()" id="button">Clear</button>
-			<button onclick="launch()" id="button">Launch</button>
+			<button onclick="launch()" id="buttontwo">Launch</button>
 			</div>
 		</div>
 
