--- a/webGL2/index.html
+++ b/webGL2/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<meta charset="UTF-8"/>
+	<meta charset="UTF-8">
 		<title>Canon simulator</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
 		<link rel="stylesheet" href="style.css">
@@ -26,7 +26,6 @@
 					 <p>
 	    		Ball Velocity <br> <input type="number" id="initialVelocity" name="initialVelocity" min="0" max="500" value="50"><br><br>
 						Angle <br> <input type="number" id="angle" name="angle" min="0" max="359" value="45"><br><br>
-						Radie <br> <input type="number" id="ballSize" name="ballSize" min="0" max="0.25" step="0.01" value="0.05"><br><br>
 
 						Material <br><select name="material" id="material" onchange="updateBall(this);"> 
 										<option value="Golf">Golf ball</option>
@@ -45,13 +44,13 @@
 			<div id="windsettings" style="display:none" > <!-- style="display:none; -->
 				<h3>Wind Properties</h3>
 					<p>
-						Wind Velocity <br><input type="number" id="initialVelocity_wind" name="initialVelocity_wind" value="0"><br><br>
+						Wind Velocity <br><input type="number" id="initialVelocity_wind" name="initialVelocity_wind"value="0"><br><br>
 						Angle<br><input type="number" id="angle_wind" name="angle_wind" value="180"><br><br>
 					</p>
 			 </div>
 
 			<button onclick="clearish()" id="button">Clear</button>
-			<button onclick="launch()" id="buttontwo">Launch</button>
+			<button onclick="launch()" id="button">Launch</button>
 			</div>
 		</div>
 
