--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 	<meta charset="UTF-8">
 		<title>Canon simulator</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
 		<link rel="stylesheet" href="style.css">
 		
 		<!-- jQuery -->
