--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 		
 		<!-- jQuery -->
-		<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 		
 		<!-- javascript files -->
 		<script src="js/Stats.js"></script>
